--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,16 @@ h1 {
   width:50px;
   height:50px;
 }
+.Cross{
+  width:40px;
+  height:40px;
+  opacity:0.8;
+  position:absolute;
+
+}
+.bitboardButton{
+  margin-right:100%;
+}
+.changeBitboardButtons{
+  margin-right:6px;
+}
