--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --tileWidth: 50px;
 }
 
 a {
@@ -41,14 +42,18 @@ body {
   height:100%;
   display:flex;
   justify-content: center;
-  align-items: ;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
+.boardAndEval{
+  display: flex;
+}
+.eval{
+  position: absolute;
+}
 .tiles{
   display:grid;
   width:fit-content;
@@ -61,8 +66,8 @@ h1 {
   display:flex;
   justify-content: center;
   align-items: center;
-  width:50px;
-  height:50px;
+  width:var(--tileWidth);
+  height:var(--tileWidth);
 }
 .Cross{
   width:40px;
