--- a/src/index.css
+++ b/src/index.css
@@ -50,10 +50,20 @@ h1 {
 }
 .boardAndEval{
   display: flex;
+  width:calc(var(--tileWidth) * 8);
 }
-.eval{
-  
+.eval--Container{
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
 }
+.eval--WhiteBar{
+  background-color: white;
+  margin-left: 10px;
+  width:20px;
+  transition: height 2s ease-in-out;
+}
+
 .tiles{
   display:grid;
   width:fit-content;
